# serializer version: 1
# name: test_select_entities[select.fanlinc_lamp_ramp_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '9.0 min',
        '8.0 min',
        '7.0 min',
        '6.0 min',
        '5.0 min',
        '4.5 min',
        '4.0 min',
        '3.5 min',
        '3.0 min',
        '2.5 min',
        '2.0 min',
        '1.5 min',
        '1.0 min',
        '47 s',
        '43 s',
        '38.5 s',
        '34 s',
        '32 s',
        '30 s',
        '28 s',
        '26 s',
        '23.5 s',
        '21.5 s',
        '19 s',
        '8.5 s',
        '6.5 s',
        '4.5 s',
        '2 s',
        '0.5 s',
        '0.3 s',
        '0.2 s',
        '0.1 s',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.fanlinc_lamp_ramp_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ramp Rate',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_EE EE EE 1_RR',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities[select.fanlinc_lamp_ramp_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'FanLinc Lamp Ramp Rate',
      'options': list([
        '9.0 min',
        '8.0 min',
        '7.0 min',
        '6.0 min',
        '5.0 min',
        '4.5 min',
        '4.0 min',
        '3.5 min',
        '3.0 min',
        '2.5 min',
        '2.0 min',
        '1.5 min',
        '1.0 min',
        '47 s',
        '43 s',
        '38.5 s',
        '34 s',
        '32 s',
        '30 s',
        '28 s',
        '26 s',
        '23.5 s',
        '21.5 s',
        '19 s',
        '8.5 s',
        '6.5 s',
        '4.5 s',
        '2 s',
        '0.5 s',
        '0.3 s',
        '0.2 s',
        '0.1 s',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.fanlinc_lamp_ramp_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_select_entities[select.hallway_light_ramp_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '9.0 min',
        '8.0 min',
        '7.0 min',
        '6.0 min',
        '5.0 min',
        '4.5 min',
        '4.0 min',
        '3.5 min',
        '3.0 min',
        '2.5 min',
        '2.0 min',
        '1.5 min',
        '1.0 min',
        '47 s',
        '43 s',
        '38.5 s',
        '34 s',
        '32 s',
        '30 s',
        '28 s',
        '26 s',
        '23.5 s',
        '21.5 s',
        '19 s',
        '8.5 s',
        '6.5 s',
        '4.5 s',
        '2 s',
        '0.5 s',
        '0.3 s',
        '0.2 s',
        '0.1 s',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.hallway_light_ramp_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ramp Rate',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_AA AA AA 1_RR',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities[select.hallway_light_ramp_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hallway Light Ramp Rate',
      'options': list([
        '9.0 min',
        '8.0 min',
        '7.0 min',
        '6.0 min',
        '5.0 min',
        '4.5 min',
        '4.0 min',
        '3.5 min',
        '3.0 min',
        '2.5 min',
        '2.0 min',
        '1.5 min',
        '1.0 min',
        '47 s',
        '43 s',
        '38.5 s',
        '34 s',
        '32 s',
        '30 s',
        '28 s',
        '26 s',
        '23.5 s',
        '21.5 s',
        '19 s',
        '8.5 s',
        '6.5 s',
        '4.5 s',
        '2 s',
        '0.5 s',
        '0.3 s',
        '0.2 s',
        '0.1 s',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.hallway_light_ramp_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '23.5 s',
  })
# ---
